Implement endpoint login and get profile without JWT and database
